fix path to included files

--- a/dsapps/_templates/src/index.html
+++ b/dsapps/_templates/src/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="~/src/base.scss" />
+    <link rel="stylesheet" href="~/dsapps/_templates/src/base.scss" />
 </head>
 
 <body>
@@ -59,7 +59,7 @@
 
     <nav class="navbar navbar-expand fixed-bottom navbar-dark bg-primary"></nav>
     {% block script %}
-    <script type="module" src="~/src/base.js"></script>
+    <script type="module" src="~/dsapps/_templates/src/base.js"></script>
     {% endblock %}
 </body>
 
