early vue experiment

--- a/dsapps/_templates/src/index.html
+++ b/dsapps/_templates/src/index.html
@@ -58,8 +58,10 @@
     {% endblock %}
 
     <nav class="navbar navbar-expand fixed-bottom navbar-dark bg-primary"></nav>
+    <div id="app"></div>
     {% block script %}
     <script type="module" src="~/dsapps/_templates/src/base.js"></script>
+    <script type="module" src="~/dsapps/_templates/src/vue.js"></script>
     {% endblock %}
 </body>
 
