early electron experiment

--- a/dsapps/_templates/src/base/main.html
+++ b/dsapps/_templates/src/base/main.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
     <link rel="stylesheet" href="~/dsapps/_templates/src/base.scss" />
 </head>
 
@@ -53,7 +54,7 @@
 
     {% block body %}
     <h1>Main - Base</h1>
-    <a href="/wordcloud">WordCloud Generator</a>
+    <a href="/wordcloud">WordCloud Generator!!</a>
     {% endblock %}
 
     <nav class="navbar navbar-expand fixed-bottom navbar-dark bg-primary"></nav>
