--- a/dsapps/_templates/src/index.html
+++ b/dsapps/_templates/src/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
     <link rel="stylesheet" href="~/dsapps/_templates/src/base.scss" />
 </head>
 
