--- a/dsapps/index.html
+++ b/dsapps/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
-    <link rel="stylesheet" href="~/dsapps/_templates/src/base.scss" />
+    <link rel="stylesheet" href="./base.scss" />
 </head>
 
 <body>
@@ -53,13 +53,19 @@
     </nav>
 
     {% block body %}
-    <h1>Main - Base</h1>
-    <a href="/wordcloud">WordCloud Generator!!</a>
+    <h1>Test Index!!</h1>
+    <a href="./base/main.html">Live Index</a><br>
+    <a href="./wordcloud/main.html">WordCloud Generatcor</a><br>
+    <a href="./teste.pug">Pug</a><br>
     {% endblock %}
 
+    <div id="vue"></div>
+
     <nav class="navbar navbar-expand fixed-bottom navbar-dark bg-primary"></nav>
+
     {% block script %}
-    <script type="module" src="~/dsapps/_templates/src/base.js"></script>
+    <script type="module" src="./base.js"></script>
+    <script type="module" src="./vue.js"></script>
     {% endblock %}
 </body>
 
