organize dsapps templates

--- a/dsapps/base/main.html
+++ b/dsapps/base/main.html
@@ -3,5 +3,5 @@
 {% block body %}
 <h1>Main - Base</h1>
 <a href="/wordcloud">WordCloud Generator!</a><br>
-<a href="../teste.pug">Pug</a><br>
+<a href="../html/teste.pug">Pug</a><br>
 {% endblock %}
