integrate datacrawler with dsapps

--- a/dsapps/index.html
+++ b/dsapps/index.html
@@ -54,8 +54,8 @@
 
     {% block body %}
     <h1>Test Index!!</h1>
-    <a href="./base/main.html">Live Index</a><br>
-    <a href="./wordcloud/main.html">WordCloud Generatcor</a><br>
+    <a href="./wordcloud">WordCloud Generator</a><br>
+    <a href="./datacrawler">WoW Api Crawler</a><br>
     <a href="./html/teste.pug">Pug</a><br>
     {% endblock %}
 
