add query to WoW api

--- a/dsapps/datacrawler/index.html
+++ b/dsapps/datacrawler/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-    <a href="/">Home</a>
+    <a href="/">Home</a> - <a href="./data/raids">Home</a> -
     <div id="vue"></div>
     <script type="module" src="ui/vue.js"></script>
 </body>
