--- a/dsapps/index.html
+++ b/dsapps/index.html
@@ -55,7 +55,7 @@
     {% block body %}
     <h1>Test Index!!</h1>
     <a href="./wordcloud">WordCloud Generator</a><br>
-    <a href="./datacrawler">WoW Api Crawler</a><br>
+    <a href="./datacrawler/index.html">WoW Api Crawler</a><br>
     <a href="./html/teste.pug">Pug</a><br>
     {% endblock %}
 
