--- a/dsapps/wordcloud/index.html
+++ b/dsapps/wordcloud/index.html
@@ -22,3 +22,7 @@
     <a id="permalink" class="d-flex mx-auto" href="{{filename}}">permalink</a>
 </div>
 {% endblock %}
+
+{% block script %}
+<script type="module" src="./base.js"></script>
+{% endblock %}
