--- a/dsapps/index.html
+++ b/dsapps/index.html
@@ -2,27 +2,31 @@
 
 <head>
     <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
-    <link rel="stylesheet" href="./html/base.scss" />
+    <link rel="stylesheet" href="./_base/base.scss" />
 </head>
 
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-primary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="/">DSApps</a>
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link" href="/wordcloud">Wordcloud</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/datacrawler">DataCrawler</a>
                     </li>
-                    <li class="nav-item dropdown">
+
+                    <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Dropdown
@@ -37,35 +41,45 @@
                                 <a class="dropdown-item" href="#">Something else here</a>
                             </li>
                         </ul>
-                    </li>
-                    <li class="nav-item">
+                    </li> -->
+
+                    <!-- <li class="nav-item">
                         <a class="nav-link disabled">Disabled</a>
-                    </li>
+                    </li> -->
                 </ul>
-                <form class="d-flex">
+                <!-- <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
                     <button class="btn btn-outline-success" type="submit">
                         Search
                     </button>
-                </form>
+                </form> -->
             </div>
         </div>
     </nav>
 
-    {% block body %}
-    <h1>Test Index!!</h1>
-    <a href="./wordcloud">WordCloud Generator</a><br>
-    <a href="./datacrawler">WoW Api Crawler</a><br>
-    <a href="./html/teste.pug">Pug</a><br>
-    {% endblock %}
+    <div class="m-3">
+        {% block body %}
+        <h1 class="text-center">Welcome to DS Apps!</h1>
 
-    <div id="vue"></div>
+        <p class="text-center mt-4">Here you find a list of the current apps:</p>
 
-    <nav class="navbar navbar-expand fixed-bottom navbar-dark bg-primary"></nav>
+        <div class="d-flex flex-column col-6 m-auto align-items-center gap-2 mt-4">
+            <a href="./wordcloud">WordCloud Generator</a>
+            <a href="./datacrawler">WoW Api Crawler</a>
+            <a href="./_base/teste.pug">Pug</a>
+
+            <div class="mt-4" id="vue"></div>
+        </div>
+
+        {% endblock %}
+    </div>
+
+    <nav class="navbar navbar-expand fixed-bottom navbar-dark bg-primary justify-content-center">
+        since 2022
+    </nav>
 
     {% block script %}
-    <script type="module" src="./html/base.js"></script>
-    <script type="module" src="./html/vue.js"></script>
+    <script type="module" src="./_base/vue.js"></script>
     {% endblock %}
 </body>
 
